2005-05-11  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc3					***
	*******************************************************************

	* rerun bootstrap to get a working configure script that actually
	checks for limits.h and dependent linux autofs/nfs headers.

	* configure.in: remove redundant check for limits.h.

2005-05-09  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc2					***
	*******************************************************************

2005-05-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/amfs_generic.c (amfs_lookup_mntfs): removed redundant use of
	old_def_opts variable.

2005-05-08  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/amfs_generic.c (amfs_lookup_mntfs) : Make sure when a map
	entry has a single dash '-', that the default options are reset.
	This functionality was somehow lost from earlier releases and
	reported by Dan Riley <dsr@mail.lns.cornell.edu>.

2005-05-05  Erez Zadok  <ezk@cs.sunysb.edu>

	* config.guess.long: detect SuSE Enterprise Server and call it
	"sles" not "suse".

2005-05-02  Erez Zadok  <ezk@cs.sunysb.edu>

	* doc/am-utils.texi (amd): document proper use of
	/etc/hosts.allow.  Don't spawn a new Amd process because Amd will
	get confused if someone else waitpid's on its children (which
	often do important un/mount work).  Issue reported by Francis
	Montagnac <Francis.Montagnac at sophia.inria.fr>.

	* minor new ports: powerpc64-unknown-linux-rhel4, and
	powerpc64-unknown-linux-sles9.

2005-05-01  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/amfs_host.c (amfs_host_umount): We do not want to pass
	ENOENT as an error because if the directory does not exists our
	work is done anyway.

	* conf/umount/umount_linux.c (umount_fs): If we are successful or
	there was an ENOENT, remove the mount entry from the mtab file.
