@@ -1,3 +1,8 @@
+*** Notes specific to am-utils version 6.1-rc4
+
+- bugs fixed:
+	* check for "macosx" in M4 macros properly
+
 *** Notes specific to am-utils version 6.1-rc3
 
 Minor fix to configure.in.  Reran bootstrap to get a working configure
